--- a/react-app/src/styles/Todo.module.css
+++ b/react-app/src/styles/Todo.module.css
@@ -20,6 +20,8 @@
 }
 .groupHeading {
   font-size: 4rem;
+  margin: 0;
+  padding: 0;
 }
 .ul {
   max-width: 800px;
@@ -27,6 +29,7 @@
 
 .title {
   margin: 0 0 1rem 0;
+  padding: 0;
   font-size: 2.5rem;
   font-weight: normal;
 }
