--- a/react-app/src/styles/Todo.module.css
+++ b/react-app/src/styles/Todo.module.css
@@ -16,12 +16,44 @@
   border: 1px solid #eaeaea;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
+  max-width: 400px;
 }
+/* .groupHeading - */
 .groupHeading {
   margin: 0;
   font-size: 4rem;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
 }
+.sort {
+  position: relative;
+  font-size: 0.3rem;
+  margin: 0 0 0 auto;
+  cursor: pointer;
+  background: transparent;
+  border: 0;
+}
+.sort span {
+  visibility: hidden;
+}
+
+.sort::before {
+  content: "";
+  border: solid black;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+}
+.sortDesc::before {
+  padding: 3px;
+  transform: rotate(-135deg);
+}
+.sortAsc::before {
+  padding: 3px;
+  transform: rotate(45deg);
+}
+
+/* end .groupHeading */
 .ul {
   margin: 0;
   padding: 0;
@@ -30,7 +62,7 @@
 }
 
 .todoGroup {
-  margin: 0 0 1rem 1rem;
+  margin: 0 2rem 1rem 1rem;
   font-size: 2.5rem;
   font-weight: normal;
 }
@@ -42,6 +74,16 @@
 .fail {
   color: red;
   font-size: 4rem;
+}
+.label {
+  display: flex;
+  align-items: center;
+}
+.completed {
+  font-style: normal;
+  color: purple;
+  margin: 0 0 0 auto;
+  font-size: 1.4rem;
 }
 
 
